:sparkles: List namespace sort with field

--- a/web/src/pages/Namespace/index.css
+++ b/web/src/pages/Namespace/index.css
@@ -17,3 +17,13 @@
 .menu-action-top {
   margin-top: -7rem;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
