:sparkles: Update user profile and password

--- a/docs/src/css/custom.scss
+++ b/docs/src/css/custom.scss
@@ -192,6 +192,11 @@ $roboto: "Roboto Mono", monospace;
     margin-top: 40px;
   }
 
+  .hero-try-demo {
+    margin-top: 40px;
+    margin-left: 20px;
+  }
+
   .boxes {
     display: flex;
     margin-top: 100px;
